--- a/react-vite/src/components/TeeTimes/TeeTime.css
+++ b/react-vite/src/components/TeeTimes/TeeTime.css
@@ -8,10 +8,11 @@
   font-family: Arial, sans-serif;
   font-size: 14px;
 }
-.player_number {
-  position: sticky;
-  top: 20px;
-  background-color: white;
+.date-nav{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
 }
 
 /* Table header */
@@ -24,7 +25,7 @@
 
 /* Table cells */
 .tee-sheet td {
-  padding: 10px;
+  padding: 8px;
   border: 1px solid #ccc;
   text-align: center;
 }
@@ -43,13 +44,13 @@
   float: right;
   margin-left: 10px; 
   margin-right: 10px;
-  background-color: hsl(240, 72%, 66%);
+  background-color: hsl(240, 23%, 97%);
 }
 
   
 .status-icon {
-  max-width: 20px;
-  max-height: 20px;
+  max-width: 15px;
+  max-height: 15px;
   padding: 0;
   margin: 0;
 }
