--- a/react-vite/src/context/Modal.css
+++ b/react-vite/src/context/Modal.css
@@ -22,3 +22,17 @@
   position: absolute;
   background-color:white;
 }
+
+.modal-top-left {
+  position: fixed;      
+  top: 60px;           
+  left: 0;  
+  margin-left: 50px;             
+  z-index: 1000;        
+  background: #fff;     
+  padding: 20px;
+  padding-top: 50px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+  width: 500px;          
+  border-radius: 4px;   
+}
