added more functionality to the components

--- a/react-vite/src/components/NavButton/NavButton.css
+++ b/react-vite/src/components/NavButton/NavButton.css
@@ -1,15 +1,27 @@
-/* Modal container */
 
+.nav-component-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 300px;
+}
+
+.Logo{
+    background-color: transparent;
+    font-size: 40px;
+    color: white;
+    font-style: italic;
+    border: none;
+}
   
   
-  /* Navigation list as two columns */
   .modal-nav-container ul {
     list-style: none;
     padding: 0;
     margin: 0;
     display: grid;
-    grid-template-columns: 1fr 1fr; /* two columns */
-    gap: 10px 20px; /* vertical 10px, horizontal 20px */
+    grid-template-columns: 1fr 1fr; 
+    gap: 10px 20px; 
   }
   
   .modal-nav-container ul li  {
@@ -34,6 +46,12 @@
     cursor: pointer;
     border-radius: 5px;
     border: 1px solid #333;
-    background-color: #fff;
+    background-color:transparent;
+    border: none;
+    color: white;
+    font-size: 20px;
+  }
+  .dropdown-arrow{
+    font-size: 12px;
   }
   
