--- a/react-vite/src/components/Pricing/PricingForm.css
+++ b/react-vite/src/components/Pricing/PricingForm.css
@@ -45,19 +45,22 @@
   }
   .pricing-submit-btn{
     height: 30px;
-   background-color: rgb(95, 159, 227);
+   background-color: #156C9D;
    border-radius: 3px;
    border: none;
    display: flex;
+   color: white;
+   margin-top: 15px;
    align-items: center;
    justify-content: center;
   }
   .pricing-submit-btn:hover{
     height: 30px;
-   background-color: rgb(75, 115, 157);
+   background-color: #4BA3D0;
    border-radius: 3px;
    border: none;
    display: flex;
+   color: white;
    align-items: center;
    justify-content: center;
   }
